<resources>
    <string name="app_name">DataStorageDemo</string>
    <string name="action_settings">Settings</string>
    <string name="SQLite">SQLite</string>
    <string name="SharedPreferences">SharedPreferences</string>
    <string name="create_table">创建表</string>
    <string name="insert_table">插入表</string>
    <string name="read_table">读取表</string>
    <string name="delete_table">删除表</string>
    <string name="update_table">更新表</string>
    <string name="write_data">写入数据</string>
    <string name="read_data">读取数据</string>
    <string name="preference_file_key">com.zhangmiao.datastoragedemo.PREFRENCE_FILE_KEY</string>
    <string name="file">File</string>
    <string name="content_provider">ContentProvider</string>
    <string name="add_data">增加数据</string>
    <string name="delete_data">删除数据</string>
    <string name="update_data">更改数据</string>
    <string name="query_data">查询数据</string>
    <string name="network">Network</string>
    <string name="get_data">获取数据</string>
    <string name="put_data">上传数据</string>
</resources>
